--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,10 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              // "node_modules/primeicons/primeicons.css",
-              // "node_modules/primeng/resources/themes/nova-light/theme.css",
-              // "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
