--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^8.1.1",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -27,13 +27,14 @@
     "@types/google-maps": "^3.2.1",
     "@types/google__maps": "^0.5.11",
     "@types/googlemaps": "^3.39.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
     "google-maps": "*",
     "heatmap.js": "*",
     "jquery": "^3.4.1",
     "ng2-map": "^0.16.5",
-    "primeicons": "^4.0.0",
-    "primeng": "^10.0.0-rc.3",
+    "primeflex": "^2.0.0-rc.1",
+    "primeicons": "^3.0.0",
+    "primeng": "^8.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
