--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "^8.1.1",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/google-maps": "^9.0.0-rc.0",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
@@ -29,6 +31,7 @@
     "@types/googlemaps": "^3.39.2",
     "bootstrap": "^4.5.2",
     "google-maps": "*",
+    "hammerjs": "^2.0.8",
     "heatmap.js": "*",
     "jquery": "^3.4.1",
     "mat-icon-import": "^0.1.1",
